--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,30 +1,49 @@
 /**index.wxss**/
+@import "../common/widget/widget.wxss";
 .container {
   padding: 0rpx
 }
-/* .userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
-}
-
-.userinfo-nickname {
-  color: #aaa;
-}
-
-.usermotto {
-  margin-top: 200px;
-} */
 
 .swiper {
   height: 400rpx;
   width: 100%;
   background-color: #eee
+}
+
+.swiper .wx-swiper-dot {
+  background:pink
+}
+
+.swiper .wx-swiper-dot-active {
+  width: 40rpx;
+  border-radius: 20rpx;
+  background:#ff461f;
+}
+.itemList{
+  width: 100%;
+  display: flex;
+  justify-content:center;
+  flex-wrap: wrap;
+}
+
+.about{
+  width: 100%;
+  display: flex;
+  flex-direction:column;
+  color:#888;
+  padding:40rpx 60rpx;
+  font-size: 32rpx;
+  background:#f2f2f2;
+}
+
+.about_block{
+  margin:10rpx 40rpx;
+  height: 40rpx;
+  overflow:hidden; 
+  text-overflow:ellipsis;
+  white-space:nowrap; 
+}
+.about_key{
+  width:80rpx;
+  display: inline-block;
 }
