--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -26,6 +26,12 @@
   flex-wrap: wrap;
 }
 
+
+.firstItemClass .iconText-icon {
+  width:320rpx;
+  height:200rpx;
+}
+
 .about{
   width: 100%;
   display: flex;
