--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -1,22 +1,59 @@
 /* pages/mine/mine.wxss */
-
+@import "../common/widget/widget.wxss";
+.mine{
+  min-height: 100%;
+  background: #eee;
+  border-top: 1rpx solid #eee;
+}
 .userinfo {
   display: flex;
-  flex-direction: column;
   align-items: center;
+  height:160rpx;
+  background: #fff;
+  /* background:linear-gradient(to right,yellow #ff461f ); */
+  margin: 20rpx;
+  border-radius: 50rpx;
+  border-top: 1rpx solid #999;
 }
 
 .userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
+  width: 108rpx;
+  height: 108rpx;
+  margin:0 30rpx;
   border-radius: 50%;
 }
 
-.userinfo-nickname {
-  color: #aaa;
+.mine_header_text {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  color:#000;
+  font-size: 36rpx;
+  
 }
 
-.usermotto {
-  margin-top: 200px;
+.mine_header_seText{
+  color:#aaa;
+  font-size: 28rpx;
+  margin-top: 10rpx;
+}
+.mine_content {
+  display: flex;
+  flex-direction: column;
+  padding: 50rpx;
+}
+
+.mineListStyle {
+  width: 90%;
+  height: 80rpx;
+  background: #fff;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  padding:10rpx 30rpx;
+  border-radius: 20rpx;
+  margin:20rpx 0;
+}
+.mineTextClass{
+  margin-left:40rpx;
 }
